tests/ui/lang-items/start_lang_item_args.missing_all_args.stderr
error: incorrect number of parameters for the `start` lang item
  --> $DIR/start_lang_item_args.rs:15:1
   |
LL | fn start<T>() -> isize {
   | ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: the `start` lang item should have four parameters, but found 0
   = note: the `start` lang item should have the signature `fn(fn() -> T, isize, *const *const u8, u8) -> isize`

error: aborting due to previous error

